[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/file_paths.gd" type="Script" id=1]

[node name="FilePaths" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.135
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_input" type="LineEdit" parent="."]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 0.5
margin_left = 2.0
margin_top = 6.0
margin_right = -2.0
margin_bottom = -6.0
editable = false
placeholder_text = "Choose a file to split into smaller bits! (PNG)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_output" type="LineEdit" parent="."]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 6.0
margin_right = -2.0
margin_bottom = -6.0
editable = false
placeholder_text = "Choose a folder where sprites will be stored."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_input" type="Label" parent="."]
anchor_right = 0.2
anchor_bottom = 0.5
text = "Sprite Sheet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_output" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 1.0
margin_right = 0.968994
text = "Save location"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_input" type="Button" parent="."]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = 11.8769
margin_right = -25.0
margin_bottom = -7.12305
text = "open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_dialog" type="FileDialog" parent="button_input"]
anchor_left = 0.039
anchor_top = 0.078
anchor_right = 0.973
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_output" type="Button" parent="."]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 10.0
margin_right = -25.0
margin_bottom = -10.3371
text = "open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output_dialog" type="FileDialog" parent="button_output"]
anchor_left = 0.039
anchor_top = 0.078
anchor_right = 0.973
anchor_bottom = 1.0
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}
